syntax = "proto3";

package tritontube;

option go_package = "internal/proto;proto";

// Storage service for video content
service StorageService {
    // Read video content from storage
    rpc Read(ReadRequest) returns (ReadResponse);
    // Write video content to storage
    rpc Write(WriteRequest) returns (WriteResponse);
    // Delete video content from storage
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    // List all videos in storage
    rpc List(ListRequest) returns (ListResponse);
}

message ReadRequest {
    string video_id = 1;
    string filename = 2;
}

message ReadResponse {
    bytes data = 1;
}

message WriteRequest {
    string video_id = 1;
    string filename = 2;
    bytes data = 3;
}

message WriteResponse {
    int64 size = 1;
}

message DeleteRequest {
    string video_id = 1;
    string filename = 2;
}

message DeleteResponse {}

message ListRequest {}

message ListResponse {
    repeated string video_ids = 1;
} 
